k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cyberguard-api-svc
  namespace: cyberguard
  labels:
    app.kubernetes.io/name: cyberguard-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: cyberguard-api
